# examples

./: .gitignore  Dockerfile  FINDINGS.md  README.md  WRITEUP.md  aggregate.py  analysis.py  demo.ipynb  demo.py  hate_lexicon.py  hunt_vulgar.py  hunt_worst.py  index.html  lexicon.py  main.py  merge_unhinged.py  pipeline.py  probe.py  reduce.py  reduce_vulgar.py  reduce_worst.py  requirements.txt  rescore_vulgar.py  rescore_worst.py  scale.py  scale_vulgar.py  scale_worst.py  warmup.py
airbnb-burla-demo/: .env.example  .gitignore  Makefile  README.md  WRITEUP.md  pyproject.toml
airbnb-burla-demo/data/: manual_blocklist.json
airbnb-burla-demo/data/outputs/: correlations.json  drug_den_vibes.json  hectic_kitchens.json  pets_in_photos.json  world_map.json  worst_tv_placements.json
airbnb-burla-demo/scripts/: apply_manual_blocklist.py
airbnb-burla-demo/site/: app.js  index.html  style.css
airbnb-burla-demo/site/data/: funniest_reviews.json  hectic_kitchens.json  homepage_stats.json  runtime_log.json  validation_report.json  world_map.json
airbnb-burla-demo/src/: config.py
airbnb-burla-demo/src/lib/: budget.py  inside_airbnb.py  io.py
airbnb-burla-demo/src/stages/: s00_validate_cities.py  s01_download_listings.py  s02a_scrape_photo_urls.py  s02b_clip_score_photos.py  s03_yolo_detect_photos.py  s04_score_reviews.py  s05_bootstrap_correlations.py  s05b_haiku_validate_wtf.py  s05c_haiku_validate_photos.py  s06_build_site_data.py  s07_calendar_demand.py
airbnb-burla-demo/src/tasks/: categories_tasks.py  wtf_tasks.py  (+3 more)
airbnb-burla-demo/tests/: test_parse_price.py
(+603 files in other folders)
